--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,6 +3,9 @@ body {
 }
 
 header {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
 	background-color: #333;
 	color: white;
 }
