--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -49,3 +49,29 @@ footer {
 	background-color: white;
 	color: #999;
 }
+
+#account-content {
+	display: flex;
+	flex-direction: row;
+}
+
+#account-main {
+	width: 80%;
+}
+
+#account-video-container {
+	margin: 0px auto;
+	width: 500px;
+	height: 375px;
+	border: 10px #333 solid;
+}
+
+#account-video {
+	width: 500px;
+	height: 375px;
+	background-color: #666;
+}
+
+#account-aside {
+	width: 20%;
+}
