completed loading pictures to server

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -45,6 +45,10 @@ header a {
 	margin-right: 1.5vmin;
 }
 
+.comment {
+	margin-right: 1.5vmin;
+}
+
 footer {
 	background-color: white;
 	color: #999;
