--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,5 @@
 body {
 	font-family: Georgia;
-	background-color: pink;
 }
 
 header {
@@ -25,17 +24,17 @@ header a:visited {
 
 #gallery {
 	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-around;
+	flex-direction: column;
 	align-items: center;
 }
 
 .photo-container {
+	width: 50%;
 	margin: 1vmin;
 }
 
 .photo {
-	width: 50vmin;
+	width: 100%;
 }
 
 .like-comment {
@@ -43,20 +42,10 @@ header a:visited {
 	flex-direction: row;
 	justify-content: flex-end;
 	padding: 1vmin;
-	background-color: rgba(255, 255, 255, 0.2);
-}
-
-.like-comment div {
-	margin: 0;
-	padding: 0;
 }
 
 .like {
-	margin-right: 1.5vmin;
-}
-
-.comment {
-	margin-right: 1.5vmin;
+	margin-right: 2vmin;
 }
 
 #account-content {
@@ -85,7 +74,6 @@ header a:visited {
 #account-video {
 	width: 50vmin;
 	height: 50vmin;
-	background-color: #666;
 }
 
 #preview {
