--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -64,7 +64,7 @@ header a:visited {
 }
 
 #account-main {
-	width: 80%;
+	width: 70%;
 }
 
 #account-photo-section {
@@ -99,7 +99,7 @@ header a:visited {
 }
 
 #account-aside {
-	width: 20%;
+	width: 30%;
 	padding: 1vmin;
 	border-left: 1px solid black;
 }
@@ -117,9 +117,11 @@ header a:visited {
 #account-user-pictures {
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 }
 
 .user-picture {
+	margin: 1vmin;
 	width: 50vmin;
 }
 
