--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -73,47 +73,38 @@ header a:visited {
 	justify-content: center;
 }
 
-#account-photo-buttons {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
 #account-video-container {
 	width: 50vmin;
-	height: 50vmin;
+	/* height: 50vmin; */
 	margin: 1vmin;
 	border: 1px solid black;
 }
 
 #account-video {
 	width: 50vmin;
-	height: 50vmin;
+	/* height: 50vmin; */
 }
 
 #preview {
-	/* display: flex;
-	align-items: center; */
 	position: relative;
 	width: 50vmin;
-	height: 50vmin;
+	/* height: 50vmin; */
 	margin: 1vmin;
 	border: 1px solid black;
 }
 
 .sticked-sticker {
-	width: 50vmin;
+	width: 100%;
+	height: 100%;
 	position: absolute;
 	left: 0;
 	right: 0;
 }
 
-/* .edited-sticker {
-	border: 1px solid black;
-} */
-
-#account-capture-button {
-	margin: 1vmin;
+#account-photo-buttons {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 #account-aside {
