--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -126,7 +126,7 @@ header a:visited {
 
 #account-stickers {
 	display: flex;
-	justify-content: flex-start;
+	justify-content: space-between;
 	flex-wrap: wrap;
 }
 
@@ -144,7 +144,12 @@ header a:visited {
 .sticker {
 	width: 25vmin;
 	height: 25vmin;
-	margin: 1vmin;
+	cursor: pointer;
+}
+
+.sticker img {
+	width: 100%;
+	height: 100%;
 }
 
 .sticked:hover {
