created utils.js module

--- a/views/account.html
+++ b/views/account.html
@@ -37,5 +37,6 @@
 		</div>
 		<footer>@ grevenko 2018</footer>
 	</body>
-	<script src='js/account.js'></script>
+	<script src='js/account.js' type='module'></script>
+	<script src='/js/utils.js' type='module'></script>
 </html>
