--- a/views/home.html
+++ b/views/home.html
@@ -16,5 +16,6 @@
 		</main>
 		<footer>@ grevenko 2018</footer>
 	</body>
-	<script src='js/home.js'></script>
+	<script src='/js/home.js' type='module'></script>
+	<script src='/js/utils.js' type='module'></script>
 </html>
