--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -64,7 +64,7 @@ header a:visited {
 }
 
 #account-main {
-	width: 70%;
+	width: 80%;
 }
 
 #account-photo-section {
@@ -109,7 +109,6 @@ header a:visited {
 #account-aside {
 	width: 30%;
 	padding: 1vmin;
-	border-left: 1px solid black;
 }
 
 #account-stickers-h1 {
@@ -137,4 +136,10 @@ header a:visited {
 	width: 25vmin;
 	height: 25vmin;
 	cursor: pointer;
+}
+
+#error-container {
+	width: 100%;
+	height: 5vmin;
+	border: 1px solid black;
 }
