--- a/views/home.html
+++ b/views/home.html
@@ -10,6 +10,7 @@
 			<div>Camagru Gallery</div>
 			<div id='header-buttons-div'></div>
 		</header>
+		<div id='error-container'></div>
 		<div id='form-container'></div>
 		<main>
 			<div id='gallery'></div>
