--- a/views/resetPassword.html
+++ b/views/resetPassword.html
@@ -6,7 +6,7 @@
 	<body>
 		<div id='message-container'></div>
 		<div>
-			New password: <input id='reset-password-password' type='password' value=''>
+			<input id='reset-password-password' placeholder='New password' type='password' value=''>
 			<button id='reset-password-button'>Submit</button>
 		</div>
 	</body>
