--- a/views/account.html
+++ b/views/account.html
@@ -23,7 +23,11 @@
 				<div id='photo-section'>
 					<div id='container'></div>
 				</div>
-				<div id='stickers'></div>
+				<div id='stickers-container'>
+					<button id='stickers-back'><</button>
+					<div id='stickers'></div>
+					<button id='stickers-forward'>></button>
+				</div>
 			</main>
 			<section id='change-section'>
 				<div id='message-container'></div>
