implemented enabling/disabling email notifications in account

--- a/views/account.html
+++ b/views/account.html
@@ -44,6 +44,7 @@
 						<input id='password' placeholder='Password' type='password' value=''>
 						<button id='change-password-button'>Change</button>
 					</div>
+					<button id='notification'></button>
 				</div>
 			</section>
 			<div id='user-photos'></div>
