--- a/views/404.html
+++ b/views/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel='stylesheet' href='css/styles.css'>
+		<title>Page Not Found</title>
 	</head>
 	<body>
 		<h1>Oops!</h1>
