--- a/views/resetPassword.html
+++ b/views/resetPassword.html
@@ -9,6 +9,7 @@
 		<div>
 			<input id='reset-password-password' placeholder='New password' type='password' value=''>
 			<button id='reset-password-button'>Submit</button>
+			<a href='/'>Go Home</a>
 		</div>
 	</body>
 	<script src='js/resetPassword.js' type='module'></script>
