--- a/public/css/account.css
+++ b/public/css/account.css
@@ -107,3 +107,36 @@ header a {
 .invisible {
 	display:none
 }
+
+#overlay {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: #c1bdba;
+	z-index: 2;
+	opacity: 0.6;
+}
+
+.custom-confirm {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	z-index: 3;
+	padding: 3vmin;
+	color: white;
+	background-color: rgb(19, 35, 47);
+	border-radius: 4px;
+	box-shadow: 0 4px 10px 4px rgba(19, 35, 47, 0.3);
+	opacity: 1;
+}
+
+.custom-confirm button {
+	width: 50%;
+}
+
+.no-scroll {
+	overflow: hidden;
+}
