--- a/public/css/account.css
+++ b/public/css/account.css
@@ -119,7 +119,7 @@ header a {
 	opacity: 0.6;
 }
 
-.custom-confirm {
+#custom-confirm {
 	position: fixed;
 	top: 50%;
 	left: 50%;
@@ -133,7 +133,7 @@ header a {
 	opacity: 1;
 }
 
-.custom-confirm button {
+#custom-confirm button {
 	width: 50%;
 }
 
