--- a/public/css/common.css
+++ b/public/css/common.css
@@ -1,3 +1,101 @@
+:root {
+	--button-color: rgb(26, 177, 136);
+	--main-background-color: rgb(19, 106, 83);
+	--dark-color: rgb(19, 35, 47);
+	--dark-transparent-color: rgba(19, 35, 47, 0.9);
+}
+
+body {
+	margin: 0;
+	font-family: Georgia;
+	color: white;
+	background-color: var(--main-background-color);
+}
+
+header {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	position: fixed;
+	width: 100%;
+	height: 5vmin;
+	top: 0;
+	z-index: 1;
+	background-color: rgb(19, 35, 47);
+	color: white;
+}
+
+header a {
+	margin: 1.5vmin;
+	padding: 1vmin;
+    border: 0;
+    border-radius: 1px;
+	color: #ffffff;
+	font: 400 11px system-ui;
+	text-decoration: none;
+    background-color: var(--button-color);
+    -webkit-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+    -webkit-appearance: none;
+}
+
+header a:visited {
+	text-decoration: none;
+	color: white;
+}
+
+header a:hover {
+	position: relative;
+	top: 1px;
+	left: 1px;
+	background-color: #179b77;
+    cursor: pointer;
+}
+
+input {
+	padding: 0.5vmin;
+	color: white;
+	background-color: rgb(19, 35, 47);
+	outline: 0;
+}
+
+input:focus {
+	border-color: var(--button-color);
+}
+
+::placeholder {
+    color: rgb(255, 255, 255, 0.8);
+    opacity: 1; /* Firefox */
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+    color: rgb(255, 255, 255, 0.8);
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+    color: rgb(255, 255, 255, 0.8);
+}
+
+button {
+	padding: 1vmin;
+    border: 0;
+    border-radius: 1px;
+    color: #ffffff;
+    background-color: var(--button-color);
+    -webkit-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+    -webkit-appearance: none;
+}
+
+button:hover {
+	position: relative;
+	top: 1px;
+	left: 1px;
+	background-color: #179b77;
+    cursor: pointer;
+}
+
 #overlay {
 	position: fixed;
 	top: 0;
