--- a/views/home.html
+++ b/views/home.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Camagru</title>
+		<title id='websit-title'>Camagru</title>
+		<link rel='stylesheet' href='css/common.css'>
 		<link rel='stylesheet' href='css/home.css'>
 		<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
 	</head>
@@ -11,7 +12,7 @@
 			<div id='header-buttons-div'></div>
 		</header>
 		<div id='message-container'></div>
-		<div id='form-container'></div>
+		<div id='form-container' class='invisible'></div>
 		<main>
 			<div id='gallery'></div>
 		</main>
