--- a/views/home.html
+++ b/views/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title id='websit-title'>Camagru</title>
+		<title id='website-title'>Camagru</title>
 		<link rel='stylesheet' href='css/common.css'>
 		<link rel='stylesheet' href='css/home.css'>
 		<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
