--- a/public/css/common.css
+++ b/public/css/common.css
@@ -1,8 +1,11 @@
 :root {
-	--button-color: rgb(26, 177, 136);
-	--main-background-color: rgb(19, 106, 83);
-	--dark-color: rgb(19, 35, 47);
-	--dark-transparent-color: rgba(19, 35, 47, 0.9);
+	--button-color: rgb(138, 52, 123);
+	--dark-color: rgb(217, 128, 172);
+	--main-background-color: rgb(251, 205, 205);
+	--button-transparent-color: rgba(138, 52, 123, 0.9);
+	--login-color: rgb(224, 224, 232);
+	--like-color: rgb(233, 175, 190);
+	--comment-color: rgb(245, 253, 255);
 }
 
 body {
@@ -21,8 +24,9 @@ header {
 	width: 100%;
 	height: 5vmin;
 	top: 0;
+	padding: 5px;
 	z-index: 1;
-	background-color: rgb(19, 35, 47);
+	background-color: var(--dark-color);
 	color: white;
 }
 
@@ -49,14 +53,14 @@ header a:hover {
 	position: relative;
 	top: 1px;
 	left: 1px;
-	background-color: #179b77;
+	background-color: var(--button-transparent-color);
     cursor: pointer;
 }
 
 input {
 	padding: 0.5vmin;
 	color: white;
-	background-color: rgb(19, 35, 47);
+	background-color: var(--button-color);
 	outline: 0;
 }
 
@@ -92,8 +96,21 @@ button:hover {
 	position: relative;
 	top: 1px;
 	left: 1px;
-	background-color: #179b77;
+	background-color: var(--button-transparent-color);
     cursor: pointer;
+}
+
+footer {
+	display: flex;
+	align-items: center;
+	position: fixed;
+	width: 100%;
+	height: 5vmin;
+	bottom: 0;
+	z-index: 1;
+	padding: 5px;
+	background-color: var(--dark-color);
+	color: white;
 }
 
 #overlay {
@@ -127,4 +144,8 @@ button:hover {
 
 .no-scroll {
 	overflow: hidden;
+}
+
+.invisible {
+	display: none
 }
