--- a/public/css/common.css
+++ b/public/css/common.css
@@ -1,8 +1,9 @@
 :root {
 	--button-color: rgb(138, 52, 123);
-	--dark-color: rgb(217, 128, 172);
+	--header-color: rgb(217, 128, 172);
 	--main-background-color: rgb(251, 205, 205);
-	--button-transparent-color: rgba(138, 52, 123, 0.9);
+	--photo-hover-color: rgba(138, 52, 123, 0.9);
+	--input-color: rgba(138, 52, 123, 0.5);
 	--login-color: rgb(224, 224, 232);
 	--like-color: rgb(233, 175, 190);
 	--comment-color: rgb(245, 253, 255);
@@ -10,6 +11,7 @@
 
 body {
 	margin: 0;
+	overflow-x: hidden;
 	font-family: Georgia;
 	color: white;
 	background-color: var(--main-background-color);
@@ -22,17 +24,17 @@ header {
 	align-items: center;
 	position: fixed;
 	width: 100%;
-	height: 5vmin;
+	height: 4vh;
 	top: 0;
 	padding: 5px;
 	z-index: 1;
-	background-color: var(--dark-color);
+	background-color: var(--header-color);
 	color: white;
 }
 
 header a {
 	margin: 1.5vmin;
-	padding: 1vmin;
+	padding: 5px;
     border: 0;
     border-radius: 1px;
 	color: #ffffff;
@@ -53,15 +55,15 @@ header a:hover {
 	position: relative;
 	top: 1px;
 	left: 1px;
-	background-color: var(--button-transparent-color);
+	background-color: var(--photo-hover-color);
     cursor: pointer;
 }
 
 input {
 	padding: 0.5vmin;
 	color: white;
-	background-color: var(--button-color);
-	outline: 0;
+	background-color: var(--input-color);
+	border: 0;
 }
 
 input:focus {
@@ -82,7 +84,7 @@ input:focus {
 }
 
 button {
-	padding: 1vmin;
+	padding: 5px;
     border: 0;
     border-radius: 1px;
     color: #ffffff;
@@ -96,7 +98,7 @@ button:hover {
 	position: relative;
 	top: 1px;
 	left: 1px;
-	background-color: var(--button-transparent-color);
+	background-color: var(--photo-hover-color);
     cursor: pointer;
 }
 
@@ -105,11 +107,11 @@ footer {
 	align-items: center;
 	position: fixed;
 	width: 100%;
-	height: 5vmin;
+	height: 3vh;
 	bottom: 0;
 	z-index: 1;
 	padding: 5px;
-	background-color: var(--dark-color);
+	background-color: var(--header-color);
 	color: white;
 }
 
@@ -139,7 +141,8 @@ footer {
 }
 
 #custom-confirm button {
-	width: 50%;
+	width: 48%;
+	margin: 1%;
 }
 
 .no-scroll {
