--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,13 +1,3 @@
-:root {
-	--button-color: rgb(138, 52, 123);
-	--dark-color: rgb(217, 128, 172);
-	--main-background-color: rgb(251, 205, 205);
-	--button-transparent-color: rgba(138, 52, 123, 0.9);
-	--login-color: rgb(224, 224, 232);
-	--like-color: rgb(233, 175, 190);
-	--comment-color: rgb(245, 253, 255);
-}
-
 #header-buttons-div button {
 	margin: 0.5vmin;
 }
@@ -31,7 +21,7 @@ main {
 	top: 5vmin;
 	right: 0;
 	padding: 1vmin;
-	background-color: var(--dark-color);
+	background-color: var(--header-color);
 	border: 1px solid white;
 }
 
@@ -62,7 +52,7 @@ main {
 }
 
 .photo-container:hover {
-	background-color: var(--button-transparent-color);
+	background-color: var(--photo-hover-color);
 }
 
 .photo {
