--- a/views/home.html
+++ b/views/home.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title id='website-title'>Camagru</title>
+		<title>Camagru</title>
 		<link rel='stylesheet' href='css/common.css'>
 		<link rel='stylesheet' href='css/home.css'>
 		<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
 	</head>
 	<body>
 		<header>
-			<div>Camagru Gallery</div>
+			<div id='website-title'>Camagru Gallery</div>
 			<div id='header-buttons-div'></div>
 		</header>
 		<div id='message-container'></div>
@@ -16,7 +16,7 @@
 		<main>
 			<div id='gallery'></div>
 		</main>
-		<footer>@ grevenko 2018</footer>
+		<footer>@grevenko 2018</footer>
 	</body>
 	<script src='/js/home.js' type='module'></script>
 	<script src='/js/utils.js' type='module'></script>
