--- a/public/css/account.css
+++ b/public/css/account.css
@@ -1,6 +1,41 @@
+#hello {
+	font-size: 3vh;
+}
+
 #content {
-	margin-top: 4vh;
+	margin-top: 6vh;
 	margin-bottom: 3vh;
+	padding: 1vh;
+}
+
+.custom-file-upload {
+	height: 4vh;
+	padding: 1vh;
+	border: 0;
+	border-radius: 1px;
+	font-size: 2vh;
+	color: #ffffff;
+	background-color: var(--button-color);
+	-webkit-transition: all 0.5s ease;
+	transition: all 0.5s ease;
+	-webkit-appearance: none;	height: 4vh;
+	padding: 1vh;
+	border: 0;
+	border-radius: 1px;
+	font-size: 2vh;
+	color: #ffffff;
+	background-color: var(--button-color);
+	-webkit-transition: all 0.5s ease;
+	transition: all 0.5s ease;
+	-webkit-appearance: none;
+}
+
+.custom-file-upload:hover {
+	position: relative;
+	top: 1px;
+	left: 1px;
+	background-color: var(--photo-hover-color);
+	cursor: pointer;
 }
 
 #photo-buttons input {
@@ -45,8 +80,8 @@
 
 #change-container {
 	display: flex;
-	flex-direction: row;
-	margin: 1vmin;
+	justify-content: center;
+	background-color: var(--header-color);
 }
 
 #stickers-container {
@@ -56,7 +91,9 @@
 }
 
 #stickers-container button {
-	font-size: 3em;
+	height: 6vh;
+	font-size: 4vh;
+	vertical-align: center;
 }
 
 #stickers {
@@ -67,6 +104,11 @@
 	align-items: center;
 	margin: 1vmin;
 	overflow: hidden;
+}
+
+#stickers img {
+	margin-left: 1vw;
+	margin-right: 1vw;
 }
 
 .sticker {
@@ -97,4 +139,17 @@
 .user-photo {
 	width: 100%;
 	margin-top: 1%;
+}
+
+.publish-button {
+	width: 49%;
+	margin-right: 2%;
+}
+
+.delete-button {
+	width: 49%;
+}
+
+input[type="file"] {
+	display: none;
 }
