--- a/public/css/common.css
+++ b/public/css/common.css
@@ -1,20 +1,24 @@
 :root {
-	--button-color: rgb(138, 52, 123);
-	--header-color: rgb(217, 128, 172);
-	--main-background-color: rgb(251, 205, 205);
-	--photo-hover-color: rgba(138, 52, 123, 0.9);
-	--input-color: rgba(138, 52, 123, 0.5);
+	--button-color: rgb(199, 105, 46);
+	--header-color: rgba(101, 82, 73, 0.8);
+	--message-container-color: rgb(101, 82, 73, 0.8);
+	--main-background-color: rgb(202, 165, 146);
+	--input-color: rgba(254, 146, 81, 0.5);
 	--login-color: rgb(224, 224, 232);
-	--like-color: rgb(233, 175, 190);
+	--like-color: rgb(255, 188, 145);
 	--comment-color: rgb(245, 253, 255);
+	--highlighted-comment-color: rgb(255, 98, 1);
 }
 
 body {
+	box-sizing: border-box;
 	margin: 0;
 	overflow-x: hidden;
+	font-size: 2vh;
 	font-family: Georgia;
 	color: white;
 	background-color: var(--main-background-color);
+	font-family: sans-serif;
 }
 
 header {
@@ -26,24 +30,27 @@ header {
 	width: 100%;
 	height: 4vh;
 	top: 0;
-	padding: 5px;
+	padding: 1vh;
 	z-index: 1;
 	background-color: var(--header-color);
 	color: white;
 }
 
 header a {
+	width: 4vh;
 	margin: 1.5vmin;
-	padding: 5px;
-    border: 0;
-    border-radius: 1px;
+	padding: 1vh;
+	border: 0;
+	border-radius: 1px;
+	font-family: Georgia;
+	font-size: 2vh;
 	color: #ffffff;
 	font: 400 11px system-ui;
 	text-decoration: none;
-    background-color: var(--button-color);
-    -webkit-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-    -webkit-appearance: none;
+	background-color: var(--button-color);
+	-webkit-transition: all 0.5s ease;
+	transition: all 0.5s ease;
+	-webkit-appearance: none;
 }
 
 header a:visited {
@@ -56,42 +63,45 @@ header a:hover {
 	top: 1px;
 	left: 1px;
 	background-color: var(--photo-hover-color);
-    cursor: pointer;
+	cursor: pointer;
 }
 
 input {
 	padding: 0.5vmin;
+	font-size: 2vh;
 	color: white;
 	background-color: var(--input-color);
 	border: 0;
 }
 
 input:focus {
-	border-color: var(--button-color);
+	outline: var(--button-color);
 }
 
 ::placeholder {
-    color: rgb(255, 255, 255, 0.8);
-    opacity: 1; /* Firefox */
+	color: rgb(255, 255, 255, 0.8);
+	opacity: 1; /* Firefox */
 }
 
 :-ms-input-placeholder { /* Internet Explorer 10-11 */
-    color: rgb(255, 255, 255, 0.8);
+	color: rgb(255, 255, 255, 0.8);
 }
 
 ::-ms-input-placeholder { /* Microsoft Edge */
-    color: rgb(255, 255, 255, 0.8);
+	color: rgb(255, 255, 255, 0.8);
 }
 
 button {
-	padding: 5px;
-    border: 0;
-    border-radius: 1px;
-    color: #ffffff;
-    background-color: var(--button-color);
-    -webkit-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-    -webkit-appearance: none;
+	height: 4vh;
+	padding: 1vh;
+	border: 0;
+	border-radius: 1px;
+	font-size: 2vh;
+	color: #ffffff;
+	background-color: var(--button-color);
+	-webkit-transition: all 0.5s ease;
+	transition: all 0.5s ease;
+	-webkit-appearance: none;
 }
 
 button:hover {
@@ -99,7 +109,11 @@ button:hover {
 	top: 1px;
 	left: 1px;
 	background-color: var(--photo-hover-color);
-    cursor: pointer;
+	cursor: pointer;
+}
+
+button:focus {
+	outline: 0;
 }
 
 footer {
@@ -110,7 +124,7 @@ footer {
 	height: 3vh;
 	bottom: 0;
 	z-index: 1;
-	padding: 5px;
+	padding-left: 1vh;
 	background-color: var(--header-color);
 	color: white;
 }
