--- a/views/404.html
+++ b/views/404.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Page Not Found</title>
+		<link rel='stylesheet' href='css/styles.css'>
 	</head>
 	<body>
 		<h1>Oops!</h1>
