--- a/views/account.html
+++ b/views/account.html
@@ -2,8 +2,9 @@
 <html>
 	<head>
 		<title>My account</title>
-		<link rel='stylesheet' href='css/common.css'>
-		<link rel='stylesheet' href='css/account.css'>
+		<!-- <link rel='stylesheet' href='css/common.css'>
+		<link rel='stylesheet' href='css/account.css'> -->
+		<link rel='stylesheet' href='css/styles.css'>
 		<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
 	</head>
 	<body>
