rewrote account.js; styled message container for each page separately

--- a/views/account.html
+++ b/views/account.html
@@ -2,8 +2,6 @@
 <html>
 	<head>
 		<title>My account</title>
-		<!-- <link rel='stylesheet' href='css/common.css'>
-		<link rel='stylesheet' href='css/account.css'> -->
 		<link rel='stylesheet' href='css/styles.css'>
 		<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
 	</head>
@@ -13,7 +11,6 @@
 			<div id='photo-buttons'>
 				<label for='file-upload' class='custom-file-upload'>UPLOAD A FILE</label>
 				<input id='file-upload' id='upload' accept='.jpg, .jpeg, .png' type='file'/>
-				<!-- <input type="file" id='upload' accept='.jpg, .jpeg, .png'> -->
 				<button id='capture-button' disabled>TAKE A PICTURE</button>
 				<button id='clear-button'>CLEAR</button>
 			</div>
@@ -34,7 +31,7 @@
 				</div>
 			</main>
 			<section id='change-section'>
-				<div id='message-container'></div>
+				<div id='account-message-container'></div>
 				<div id='change-container'>
 					<div>
 						<input id='email' placeholder='Email' type='text' value=''>
