--- a/views/resetPassword.html
+++ b/views/resetPassword.html
@@ -5,12 +5,12 @@
 		<link rel='stylesheet' href='css/styles.css'>
 	</head>
 	<body>
-		<div id='message-container'></div>
 		<div>
 			<input id='reset-password-password' placeholder='New password' type='password' value=''>
 			<button id='reset-password-button'>Submit</button>
 			<a href='/'>Go Home</a>
 		</div>
+		<div id='reset-password-message-container'></div>
 	</body>
 	<script src='js/resetPassword.js' type='module'></script>
 </html>
