--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -167,18 +167,6 @@ footer {
 	display: none
 }
 
-:root {
-	--button-color: rgb(199, 105, 46);
-	--header-color: rgba(101, 82, 73, 0.8);
-	--message-container-color: rgb(101, 82, 73, 0.8);
-	--main-background-color: rgb(202, 165, 146);
-	--input-color: rgba(254, 146, 81, 0.5);
-	--login-color: rgb(224, 224, 232);
-	--like-color: rgb(255, 188, 145);
-	--comment-color: rgb(245, 253, 255);
-	--highlighted-comment-color: rgb(255, 98, 1);
-}
-
 #header-buttons-div button {
 	margin: 0.5vmin;
 }
@@ -192,13 +180,24 @@ main {
 	font-size: 3vh;
 }
 
-#message-container {
+#home-message-container {
 	position: fixed;
 	top: 12vh;
 	right: 0;
 	background-color: var(--header-color);
 	padding: 1vh;
 	text-align: right;
+}
+
+#account-message-container {
+	background-color: var(--header-color);
+	padding: 1vh;
+	text-align: center;
+}
+
+#reset-password-message-container {
+	background-color: var(--header-color);
+	padding: 1vh;
 }
 
 #form-container {
@@ -376,10 +375,6 @@ main {
 	height: 100%;
 }
 
-#message-container {
-	margin: 1vmin;
-}
-
 #change-container {
 	display: flex;
 	justify-content: center;
@@ -420,6 +415,7 @@ main {
 
 #change-section {
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 }
 
