--- a/views/home.html
+++ b/views/home.html
@@ -2,8 +2,6 @@
 <html>
 	<head>
 		<title>Camagru</title>
-		<!-- <link rel='stylesheet' href='css/common.css'>
-		<link rel='stylesheet' href='css/home.css'> -->
 		<link rel='stylesheet' href='css/styles.css'>
 		<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
 	</head>
@@ -12,7 +10,7 @@
 			<div id='website-title'>Camagru Gallery</div>
 			<div id='header-buttons-div'></div>
 		</header>
-		<div id='message-container'></div>
+		<div id='home-message-container'></div>
 		<div id='form-container' class='invisible'></div>
 		<main>
 			<div id='gallery'></div>
